# spotify-etl

./: .env example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_env.sh
dags/: cleanup_logs.py  sample_dag.py  spotify_etl_dag.py
dashboard/: .env.example  README.md  main.py  requirements.txt  test_connection.py
dashboard/utils/: __init__.py  charts.py  data_loader.py  database.py
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: postgres.yml
init-scripts/: init-airflow-db.sql  init-spotify-db.sql
logs/scheduler/: latest
scripts/: init_airflow_connections.sh
src/: audio_features_extractor.py  copy_to_db.py  main.py  postgres_connection.py  recently_played.csv
src/extracted_features/: features.csv
src/spotify_dbt/: dbt_project.yml  profiles.yml
src/spotify_dbt/.dbt/: profiles.yml
src/spotify_dbt/macros/: calculate_affinity_scores.sql  generate_audio_feature_segments.sql
src/spotify_dbt/models/: models_directory_structure.md
src/spotify_dbt/models/marts/analytical/: artist_and_genre_preferences.sql  artist_popularity_trends.sql  genre_affinity_scores.sql  playlist_composition_metrics.sql  schema.yml  track_feature_analysis.sql  (+2 more)
src/spotify_dbt/models/staging/: schema.yml  stg_spotify_albums.sql  stg_spotify_albums_and_tracks.sql  stg_spotify_artists.sql  stg_spotify_artitsts.sql  stg_spotify_playlists.sql  stg_spotify_tracks.sql  stg_spotify_user_listening_history.sql
src/spotify_dbt/models/utils/: audio_features_helpers.sql  date_spine.sql
(+8 files in other folders)
